[package]
name = "gc-test"
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cid.workspace = true
flume.workspace = true
forest_actor_interface.workspace = true
forest_blocks.workspace = true
forest_db = { workspace = true, features = ["paritydb"] }
forest_ipld.workspace = true
forest_shim.workspace = true
forest_utils.workspace = true
fs_extra.workspace = true
fvm_ipld_blockstore.workspace = true
fvm_ipld_encoding.workspace = true
human-repr.workspace = true
memory-stats = "1.0"
mimalloc = { workspace = true, default-features = false }
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true
